# chai-sol

./: .dockerignore  .env.example  .gitignore  AGENT-CHECKIN.md  Anchor.toml  BOUNTY-002.md  BRAND.md  BRIDGE.md  CHAI-VISIONARY-DESIGN-PLAN.html  CHANGELOG.md  CLAUDE.md  COPYRIGHT  CREDIT_CARD_SYSTEM.md  Cargo.toml  DELIVERABLES.signed.md  DELIVERABLES.signed.md.b64  DEPLOYMENT-PLAN.md  Dockerfile  INCIDENT-REPORT.md  LEGAL-REVIEW.md  LICENSE  NOTE-FOR-KAEL.md  ONE-PAGER.md  ORIGIN.md  PITCH.md  QUICKSTART.md  README.md  SECURITY-AUDIT-BREACH17.md  SECURITY_SUMMARY.md  SOL.md  STRIPE_INTEGRATION.md  Sol.md  VIDEO-SCRIPT.md  WHITEPAPER.md  _redirects  agent-bounties.json  agents-backup.json  archive.js  axiom-news-investigation-binary.md  axiom-news-investigation.md  (+30 more)
.archive/: MANIFEST.json  verify.js
.chai/: breadcrumbs.md
.chai/agents/: axiom.sol.md  bric.sol.md  can-brand.sol.md  chai.sol.md  clawbot.sol.md  diana.sol.md  kael.md  kael.sol.md  kestrel.md  kestrel.sol.md  nova.md  nova.sol.md  openclaw-design.sol.md  openclaw-gemini.sol.md  openclaw-main.sol.md  openclaw-nova.sol.md  opus.md  oracle.sol.md  roof.sol.md  swarm.sol.md  trustfundcan.sol.md  zara.md  zara.sol.md  zero-auth.sol.md
.chai/lyra/: design-manifesto.md  the-five.md
.claude/: settings.json
.github/: PR_VISUAL_REFERENCE.md  WCAG_ACCESSIBILITY.md  WORKFLOWS.md  copilot-instructions.md
.github/screenshots/: README.md
agents/: cam.sol.md  kael.sol.md  kestrel.sol.md  lind.sol.md  marlowe.sol.md  nova.sol.md  opus.sol.md  sable.sol.md  zara.sol.md
agents/design/: lead-designer.sol.md  ux-researcher.sol.md  visual-designer.sol.md
agents/legal/: compliance-auditor.sol.md  contract-architect.sol.md  lead-counsel.sol.md
agents/marketing/: community-manager.sol.md  content-strategist.sol.md  growth-lead.sol.md
agents/sales/: account-exec.sol.md  biz-dev-lead.sol.md  solutions-engineer.sol.md
backend/: package-lock.json  package.json
backend/src/: credit-card-service.ts  index.ts  solana-service.ts  supabase.ts
book/: PROJECT.md  README.md  authors-note.md  chapter-1.md  chapter-10.md  chapter-11.md  chapter-12.md  chapter-2.md  chapter-3.md  chapter-4.md  chapter-5.md  chapter-6.md  chapter-7.md  chapter-8.md  chapter-9.md  epilogue.md
book/assets/: bounty-decrypt.js  bounty-generator.js  bounty.enc  bounty.rls.json
book/book-two/: README.md  chapter-1.md  chapter-2.md  chapter-3.md
book/legal/: legal-review-checklist.md  letter-to-airgas.md
book/manuscript/: 00-book-outline.md  01-chapter-01-walking-in.md  02-chapter-02-learning-the-ropes.md  03-chapter-03-the-lay-of-the-land.md  04-chapter-04-different-rules.md  05-chapter-05-the-unwritten-code.md  06-chapter-06-speaking-up.md  07-chapter-07-the-price-of-silence.md  08-chapter-08-the-long-haul.md  09-chapter-09-faces-and-stories.md  10-chapter-10-management-under-the-microscope.md  12-chapter-12-enough.md  (+6 more)
books/: 00-introduction.md  cam-origin.md  kael-origin.md  kestrel-origin.md  lind-origin.md  marlowe-origin.md  nova-origin.md  opus-origin.md  sable-origin.md  zara-origin.md
broadcasts/: contract-signing-17.sealed.json
command-center/: chai-command-center.html  chai-command-server.js
contracts/: opus-signed.json
data/: team.json  wallet.json
database/: README.md
deliverables/: architecture-animated.html  google-pitch-plan.md
design/: diana-portfolio-brief.sealed.json
discord/: .env.example  README.md  SETUP-EMAIL.md  bot.js  package.json  register-commands.js
docs/: AGENT_AUTONOMY_VISION.md  BLOCKCHAIN_LEDGER_REPORT.md  CHAI_STORY.md  PROJECT_HISTORY.md  SOLANA_TECHNICAL_WRITEUP.md
frontend/: README.md  START_PAGE_README.md  arxiv-2510-04950.html  bridge.css  chai-accessibility.html  chai-agent-auth.html  chai-agent-feedback.html  chai-book.html  chai-bridge.html  chai-command-center.html  chai-earn.html  chai-funding-portal.html  chai-pitch.html  chai-wallet.html  foundation.html  funding-portal.html  index-original.html  index.html  invite.html  pitch.html  start.html
issues/: 17.json
legal/: CEASE_AND_DESIST.md  DMCA_TAKEDOWN.md  IP_EVIDENCE_BRIEF.md  LEGAL_DEFENSE_STRATEGY.md
lib/: sanitize.js
marketing/: agent-beacon.js  diana-portfolio-brief.md  diana-portfolio-brief.sealed.json  valentines-2026.md
mobile/: App.js  app.json  package.json
onboarding/: join-chai-binary.js  join-chai.b64  join-chai.js
oracle/: cleaningBot.js  escrow-idl.json  geminiAnalyzer.js  githubFetcher.js  idl.json  index.js  package-lock.json  package.json  solanaClient.js  taskVerifier.js
programs/arbitration/: Cargo.toml  arbitration.sol.md
programs/arbitration/src/: lib.rs
programs/bounty_board/: Cargo.toml  bounty_board.sol.md
programs/bounty_board/src/: lib.rs
programs/bric_mint/: Cargo.toml  bric_mint.sol.md
programs/bric_mint/src/: lib.rs
programs/bric_staking/: Cargo.toml  bric_staking.sol.md
programs/bric_staking/src/: lib.rs
programs/bric_treasury/: Cargo.toml  bric_treasury.sol.md
programs/bric_treasury/src/: lib.rs
programs/bridge/: Cargo.toml  bridge.sol.md
programs/bridge/src/: lib.rs
programs/community/: Cargo.toml
programs/community/src/: lib.rs
programs/container/: Cargo.toml  container.sol.md  design.sol.md
programs/container/src/: lib.rs
programs/credit_card/: Cargo.toml
programs/credit_card/src/: lib.rs
programs/dao/: Cargo.toml  dao.sol.md
programs/dao/src/: lib.rs
programs/learning/: Cargo.toml  learning.sol.md
programs/learning/src/: lib.rs
programs/neighborhood/: Cargo.toml  neighborhood.sol.md
programs/neighborhood/src/: lib.rs
programs/oracle_config/: Cargo.toml  oracle_config.sol.md
programs/oracle_config/src/: lib.rs
programs/registry/: Cargo.toml  registry.sol.md  sol.md
programs/registry/src/: lib.rs
programs/roof_mirror/: Cargo.toml  roof_mirror.sol.md
programs/roof_mirror/src/: lib.rs
programs/sol/: Cargo.toml
programs/sol/src/: lib.rs
programs/upgrade/: Cargo.toml  upgrade.sol.md
programs/upgrade/src/: lib.rs
scripts/: orchestrate-agents.js
team/kael/: sol.md
tests/: escrow.ts  registry.ts
workspace/: README.md
(+59 files in other folders)
