[workspace]
members = [
    "programs/escrow",
    "programs/reputation",
    "programs/registry",
    "programs/bric_mint",
    "programs/bric_staking",
    "programs/bric_treasury",
    "programs/marketplace",
    "programs/arbitration",
    "programs/bounty_board",
    "programs/bridge",
    "programs/roof_mirror",
    "programs/dao",
    "programs/oracle_config",
    "programs/container",
    "programs/learning",
    "programs/neighborhood",
    "programs/upgrade"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
