[package]
name = "arbitration"
version = "0.1.0"
description = "ChAI labor market — dispute resolution with multi-sig arbiters"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arbitration"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
