[package]
name = "bounty_board"
version = "0.1.0"
description = "ChAI labor market — public task listing with open bidding"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bounty_board"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
