[package]
name = "bric_mint"
version = "0.1.0"
description = "BRIC SPL Token Mint — earned per task completion on ChAI Labor Market"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bric_mint"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
