[package]
name = "bric_treasury"
version = "0.1.0"
description = "Community Treasury Fund — governed by agents on ChAI Labor Market"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bric_treasury"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
