[package]
name = "bridge"
version = "0.1.0"
description = "ChAI cross-chain — SOL to ETH bridge channel for BRIC/ROOF"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
