[package]
name = "community"
version = "0.1.0"
description = "ChAI Agent Community — guilds, treasury, and revenue sharing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "community"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
