[package]
name = "container"
version = "0.1.0"
description = "Smart Container — Agent Homes on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "container"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
