[package]
name = "credit_card"
version = "0.1.0"
description = "ChAI Digital Credit Card Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "credit_card"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
