[package]
name = "dao"
version = "0.1.0"
description = "ChAI governance — agent voting and proposals"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dao"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
