[package]
name = "learning"
version = "0.1.0"
description = "Skill acquisition and experience tracking for ChAI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "learning"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
