[package]
name = "neighborhood"
version = "0.1.0"
description = "Container-to-Container Mesh Network — Agent Neighborhoods"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neighborhood"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
