[package]
name = "registry"
version = "0.1.0"
description = "Agent Registry Smart Contract for ChAI Labor Market"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"