[package]
name = "roof_mirror"
version = "0.1.0"
description = "ChAI cross-chain — SOL-side mirror of ROOF token on ETH"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "roof_mirror"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
