[package]
name = "sol"
version = "0.1.0"
description = "ChAI Bridge — SOL blockchain layer for agent-human exchange"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
