[package]
name = "upgrade"
version = "0.1.0"
description = "Container Evolution & Expansion — Upgrade Agent Homes"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "upgrade"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
